Login and register page amplify done.

--- a/src/app/components/resisterlogin/resisterlogin.component.html
+++ b/src/app/components/resisterlogin/resisterlogin.component.html
@@ -1,1 +1,6 @@
-<p>resisterlogin works!</p>
+<amplify-authenticator>
+    <div>
+        Pasale
+    </div>
+    <amplify-sign-out></amplify-sign-out>
+</amplify-authenticator>
