AAdded amplify auth and it is working fine.

--- a/src/app/components/resisterlogin/resisterlogin.component.html
+++ b/src/app/components/resisterlogin/resisterlogin.component.html
@@ -1,6 +1,6 @@
 <amplify-authenticator>
     <div>
-        Pasale
+        <app-landing></app-landing>
     </div>
     <amplify-sign-out></amplify-sign-out>
 </amplify-authenticator>
