--- a/frontend/src/app/components/landing/landing.component.html
+++ b/frontend/src/app/components/landing/landing.component.html
@@ -1,3 +1,7 @@
 <h1>Welcome {{email}} !</h1>
 <h2>Glad to have you here.</h2>
 
+
+<button pButton pRipple type="button" label="Add shop" class="p-button-rounded p-button-warning"></button>
+
+<app-shop-list></app-shop-list>
