--- a/frontend/src/app/components/landing/landing.component.html
+++ b/frontend/src/app/components/landing/landing.component.html
@@ -1,7 +1,6 @@
 <h1>Welcome {{email}} !</h1>
 <h2>Glad to have you here.</h2>
 
-
-<button pButton pRipple type="button" label="Add shop" class="p-button-rounded p-button-warning"></button>
+<app-add-shop></app-add-shop>
 
 <app-shop-list></app-shop-list>
