--- a/frontend/src/app/components/landing/add-shop/add-shop.component.html
+++ b/frontend/src/app/components/landing/add-shop/add-shop.component.html
@@ -2,16 +2,27 @@
     class="p-button-rounded p-button-warning">
 </button>
 
-<p-dialog header="Godfather I" [(visible)]="displayPosition" [position]="position" [modal]="true"
+<p-dialog header="Add a new shop" [(visible)]="displayPosition" [position]="position" [modal]="true"
     [style]="{width: '80vw'}" [baseZIndex]="10000" [draggable]="false" [resizable]="false">
-    <p>The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
-        His beloved son Michael has just come home from the war, but does not intend to become part of his father's
-        business.
-        Through Michael's life the nature of the family business becomes clear. The business of the family is just like
-        the head of the family,
-        kind and benevolent to those who give respect,
-        but given to ruthless violence whenever anything stands against the good of the family.</p>
+    <div class="card">
+        <div class="p-fluid p-formgrid p-grid">
+            <div class="p-field">
+                <label for="shopName">Shop Name</label>
+                <br>
+                <input id="shopName" [(ngModel)]="shopName" type="username" aria-describedby="shopName-help" pInputText
+                    autocomplete="off" />
+                <br>
+                <small *ngIf="!isShopNameValid()" id="shopName-help" class="p-error">Name of the shop is required.</small>
+            </div>
+            <div class="p-field">
+                <label for="shopDescription">Enter some description</label>
+                <br>
+                <textarea id="shopDescription" type="text" rows="8" autocomplete="off"
+                    placeholder="May be PAN numbers? Address? Or what you sell?" pInputTextarea></textarea>
+            </div>
+        </div>
+    </div>
     <ng-template pTemplate="footer">
-        <p-button icon="pi pi-check" (click)="displayPosition=false" label="Ok" styleClass="p-button-text"></p-button>
+        <p-button icon="pi pi-check" (click)="saveShop()" label="Save" styleClass="p-button-text"></p-button>
     </ng-template>
 </p-dialog>
