Cors enabled. Add shop by user done.

--- a/frontend/src/app/components/landing/add-shop/add-shop.component.html
+++ b/frontend/src/app/components/landing/add-shop/add-shop.component.html
@@ -17,7 +17,7 @@
             <div class="p-field">
                 <label for="shopDescription">Enter some description</label>
                 <br>
-                <textarea id="shopDescription" type="text" rows="8" autocomplete="off"
+                <textarea [(ngModel)]="shopDescription" id="shopDescription" type="text" rows="8" autocomplete="off"
                     placeholder="May be PAN numbers? Address? Or what you sell?" pInputTextarea></textarea>
             </div>
         </div>
