Showing shop data in UI.

--- a/frontend/src/app/components/landing/shop-list/shop-list.component.html
+++ b/frontend/src/app/components/landing/shop-list/shop-list.component.html
@@ -1,20 +1,7 @@
 <div class="cards-list">
-
-    <div class="card 1">
-        <div class="card_image"> <img
-                src="https://www.crushpixel.com/big-static15/preview4/camera-icon-on-color-background-2082715.jpg" />
-        </div>
-        <div class="card_title title-white">
-            <p>Card Title</p>
-        </div>
-    </div>
-
-    <div class="card 2">
+    <div class="card" *ngFor="let shop of shopList">
         <div class="card_image">
-            <img src="https://www.crushpixel.com/big-static15/preview4/camera-icon-on-color-background-2082715.jpg" />
-        </div>
-        <div class="card_title title-white">
-            <p>Card Title</p>
+            <img src="https://png.pngtree.com/png-vector/20190118/ourlarge/pngtree-vector-shop-icon-png-image_327584.jpg" />
         </div>
     </div>
 </div>
