--- a/frontend/src/app/components/landing/add-shop/add-shop.component.scss
+++ b/frontend/src/app/components/landing/add-shop/add-shop.component.scss
@@ -1,3 +1,11 @@
+.p-button-rounded, .p-button-warning{
+    background: #ff9900;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 3%;
+}
+
 .p-inputtext {
   width: 70vw;
 }
