Auth complication changes

--- a/frontend/src/app/components/resisterlogin/resisterlogin.component.html
+++ b/frontend/src/app/components/resisterlogin/resisterlogin.component.html
@@ -1,5 +1,5 @@
 <amplify-authenticator>
-    <div class="landing-area">
+    <div class="landing-area" *ngIf="authState=='signedin'">
         <app-landing></app-landing>
     </div>
     <amplify-sign-out></amplify-sign-out>
