--- a/frontend/src/app/components/resisterlogin/resisterlogin.component.html
+++ b/frontend/src/app/components/resisterlogin/resisterlogin.component.html
@@ -2,5 +2,7 @@
     <div class="landing-area" *ngIf="authState=='signedin'">
         <app-landing></app-landing>
     </div>
-    <amplify-sign-out></amplify-sign-out>
+    <div class="log-out-button">
+        <amplify-sign-out></amplify-sign-out>
+    </div>
 </amplify-authenticator>
